Network/public2.tf
resource "aws_subnet" "sub3" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.2.0/24"
  availability_zone = "us-east-1b"

  tags = {
    Name = "public2"
  }
}
